--- a/app/globals.css
+++ b/app/globals.css
@@ -32,6 +32,7 @@
 .scrollbar-hide {
   -ms-overflow-style: none;
   scrollbar-width: none;
+  /* stylelint-disable-line property-no-unknown */
 }
 
 @keyframes marquee {
